[package]
name = "rpkl"
version = "0.4.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/z-jxy/rpkl"
description = "Bindings and codegen for Apple's Pkl configuration language"
keywords = ["pkl", "apple", "codegen"]
readme = "README.md"

[dependencies]
rmp-serde = "1.1.2"
rmpv = { version = "1.0.1" } # features = ["with-serde"]
serde = { version = "1.0", features = ["derive"] }

# Gated dependencies
convert_case = { version = "0.6.0", optional = true }
dhat = { version = "0.3.3", optional = true }
indexmap = { version = "2.2.3", features = ["serde"], optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

[lints.clippy]
all = "warn"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.4"

[dev-dependencies]
serde_json = "1.0.117"

[features]
default = ["codegen"]
trace = ["tracing", "tracing-subscriber"]
dhat-heap = ["dhat"]
dhat-ad-hoc = ["dhat"]
codegen = ["convert_case"]
indexmap = ["dep:indexmap"]
